{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "gameplay",
            "id": "556b83be-37c8-40cc-bc9f-f1f09188276b",
            "actions": [
                {
                    "name": "SuctionLeftHold",
                    "type": "Value",
                    "id": "d0d88984-ccae-4f64-bc94-2a14783a9440",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Hold(pressPoint=0.01)",
                    "initialStateCheck": true
                },
                {
                    "name": "SuctionRightHold",
                    "type": "Value",
                    "id": "4a496ccf-7558-4f89-9c77-20a5df1c0f9b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Hold(pressPoint=0.01)",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveLeft",
                    "type": "Value",
                    "id": "6e73083b-45f5-44fb-a696-427b16f52a7d",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveRight",
                    "type": "Value",
                    "id": "75b9e478-a666-4e19-9936-4bec5b3053f2",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "a7167bff-b917-4628-8309-31a9eecea92a",
                    "path": "1DAxis(minValue=0)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SuctionLeftHold",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "2822b80e-0b2c-45b9-803f-0cce52599c1d",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SuctionLeftHold",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "992ccd7f-a327-44b1-abec-f5f2a713ac9d",
                    "path": "1DAxis(minValue=0)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SuctionRightHold",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "abdf27a6-0ac4-4c18-a4ce-38f3279f70e8",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SuctionRightHold",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1eb28c4a-63e7-4d68-87b3-359630f02763",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a3a4ecf-9a5a-4e92-8da4-c1645e445dbe",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}